Fix double clicking and icon spacing

--- a/app/components-react/editor/elements/SceneSelector.m.less
+++ b/app/components-react/editor/elements/SceneSelector.m.less
@@ -128,6 +128,7 @@
 .source-icons {
   display: flex;
   align-items: center;
+  margin-right: 16px;
 
   i {
     margin-left: 8px;
